repair scrollbar

--- a/style.less
+++ b/style.less
@@ -116,8 +116,11 @@
           display: flex;
           flex-direction: column;
           position: relative;
-  
-          .profileMainBody{
+           
+          .profileMainBody::-webkit-scrollbar {
+            display: none;
+            }
+          .profileMainBody {
             overflow-y: scroll;
             .buttonNav {
               position: absolute;
@@ -126,20 +129,23 @@
               top: 56px;
               display: flex;
               justify-content: space-between;
-            }
-
-            .arrow {
-                margin-left: 5px; 
-             }
- 
-             .tripleDot {
+                .arrow {
+                margin-left: 5px;
+                z-index: 10; 
+                }
+                .tripleDot {
                  display: flex;
                  flex-direction: column;
                  justify-content: space-between;
                  align-items: center;
                  margin-right: 5px;
-             }
-  
+                 z-index: 10;
+                }
+            }
+            
+            .photos::-webkit-scrollbar {
+                display: none;
+                }
             .photos {
                 position: relative;
               width: 390px;
